# Scan-Processing

./: .gitignore  CMakeLists.txt  README.md  coordonnees.txt  todo.md
src/: bounding_rect_circle.cpp  canny.cpp  contours.cpp  detect_checked_boxes.cpp  detect_circle.cpp  detect_geo_shapes.cpp  detect_hough_circle.cpp  detect_rectangles.cpp  morpho.cpp  test.cpp  test2.cpp
